--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -1,1 +1,19 @@
-<p>calc works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CalculateExpress</title>
+</head>
+<body>
+  <div class="container">
+    <div class="display">
+      <form action="">
+        <input type="text">
+      </form>
+    </div>
+
+  </div>
+</body>
+</html>
