--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -13,7 +13,13 @@
         <input type="text">
       </form>
     </div>
-
+    <div class ="buttons">
+      <div class = "operations">
+      <button class ="btn"></button>
+      <button class ="btn"></button>
+      <button class ="btn"></button>
+      <button class ="btn"></button>
+    </div>
   </div>
 </body>
 </html>
