--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -14,12 +14,15 @@
       </form>
     </div>
     <div class ="buttons">
-      <div class = "operations">
-      <button class ="btn"></button>
-      <button class ="btn"></button>
-      <button class ="btn"></button>
-      <button class ="btn"></button>
-    </div>
+      <div class = "operations row">
+        <div class="col-auto">
+          <button class ="btn">+</button>
+          <button class ="btn">-</button>
+          <button class ="btn">*</button>
+          <button class ="btn">/</button>
+        </div>
+      </div>
+      </div>
   </div>
 </body>
 </html>
