--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -22,6 +22,31 @@
           <button class ="btn">/</button>
         </div>
       </div>
+
+          <div class = "operands row">
+        <div class="col-auto">
+          <button class ="btn">1</button>
+          <button class ="btn">2</button>
+          <button class ="btn">3</button>
+        </div>
+      </div>
+
+         <div class = "operands row">
+        <div class="col-auto">
+          <button class ="btn">4</button>
+          <button class ="btn">5</button>
+          <button class ="btn">6</button>
+        </div>
+      </div>
+
+         <div class = "operands row">
+        <div class="col-auto">
+          <button class ="btn">7</button>
+          <button class ="btn">8</button>
+          <button class ="btn">9</button>
+        </div>
+      </div>
+
       </div>
   </div>
 </body>
