--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -9,41 +9,41 @@
 <body>
   <div class="container">
     <div class="display">
-      <form action="">
-        <input type="text">
+      <form action="" [formGroup]="inputStr">
+        <input type="text" formControlName="text">
       </form>
     </div>
     <div class ="buttons">
       <div class = "operations row">
         <div class="col-auto">
-          <button class ="btn">+</button>
-          <button class ="btn">-</button>
-          <button class ="btn">*</button>
-          <button class ="btn">/</button>
+          <button (click)="buttonClick($event.target)" class ="btn">+</button>
+          <button (click)="buttonClick($event.target)"class ="btn">-</button>
+          <button (click)="buttonClick($event.target)"class ="btn">*</button>
+          <button (click)="buttonClick($event.target)" class ="btn">/</button>
         </div>
       </div>
 
           <div class = "operands row">
         <div class="col-auto">
-          <button class ="btn">1</button>
-          <button class ="btn">2</button>
-          <button class ="btn">3</button>
+          <button (click)="buttonClick($event.target)"class ="btn">1</button>
+          <button (click)="buttonClick($event.target)"class ="btn">2</button>
+          <button (click)="buttonClick($event.target)"class ="btn">3</button>
         </div>
       </div>
 
          <div class = "operands row">
         <div class="col-auto">
-          <button class ="btn">4</button>
-          <button class ="btn">5</button>
-          <button class ="btn">6</button>
+          <button (click)="buttonClick($event.target)"class ="btn">4</button>
+          <button (click)="buttonClick($event.target)"class ="btn">5</button>
+          <button (click)="buttonClick($event.target)"class ="btn">6</button>
         </div>
       </div>
 
          <div class = "operands row">
         <div class="col-auto">
-          <button class ="btn">7</button>
-          <button class ="btn">8</button>
-          <button class ="btn">9</button>
+          <button (click)="buttonClick($event.target)"class ="btn">7</button>
+          <button (click)="buttonClick($event.target)"class ="btn">8</button>
+          <button (click)="buttonClick($event.target)"class ="btn">9</button>
         </div>
       </div>
 
