--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -20,6 +20,7 @@
           <button (click)="buttonClick($event.target)"class ="btn">-</button>
           <button (click)="buttonClick($event.target)"class ="btn">*</button>
           <button (click)="buttonClick($event.target)" class ="btn">/</button>
+          <button  class ="btn">=</button>
         </div>
       </div>
 
@@ -28,6 +29,7 @@
           <button (click)="buttonClick($event.target)"class ="btn">1</button>
           <button (click)="buttonClick($event.target)"class ="btn">2</button>
           <button (click)="buttonClick($event.target)"class ="btn">3</button>
+          <button (click)="clearCalc()"class ="btn">Clear</button>
         </div>
       </div>
 
@@ -36,6 +38,7 @@
           <button (click)="buttonClick($event.target)"class ="btn">4</button>
           <button (click)="buttonClick($event.target)"class ="btn">5</button>
           <button (click)="buttonClick($event.target)"class ="btn">6</button>
+          <button (click)="buttonClick($event.target)"class ="btn">0</button>
         </div>
       </div>
 
@@ -44,6 +47,7 @@
           <button (click)="buttonClick($event.target)"class ="btn">7</button>
           <button (click)="buttonClick($event.target)"class ="btn">8</button>
           <button (click)="buttonClick($event.target)"class ="btn">9</button>
+          <button (click)="buttonClick($event.target)"class ="btn">.</button>
         </div>
       </div>
 
