--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -20,7 +20,7 @@
           <button (click)="buttonClick($event.target)"class ="btn">-</button>
           <button (click)="buttonClick($event.target)"class ="btn">*</button>
           <button (click)="buttonClick($event.target)" class ="btn">/</button>
-          <button  class ="btn">=</button>
+          <button (click) ="doCalc()" class ="btn">=</button>
         </div>
       </div>
 
