--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -8,19 +8,8 @@
 </head>
 <body>
   <div class="container">
-
-  <div className="links">
-    <a href="https://www.linkedin.com/in/ryangormican/">
- Linkedin
-</a>
-<a href="https://github.com/RyanGormican/CalculateExpress">
-Github
-</a>
-<a href="https://ryangormicanportfoliohub.vercel.app/">
-Portfolio
-</a>
-   
-  </div>
+   <div class="title">CalculateExpress</div>
+  
 
     <div class="display">
       <form action="" [formGroup]="inputStr">
@@ -34,6 +23,7 @@ Portfolio
           <button (click)="buttonClick($event.target)"class ="btn">-</button>
           <button (click)="buttonClick($event.target)"class ="btn">*</button>
           <button (click)="buttonClick($event.target)" class ="btn">/</button>
+          <button (click)="calculateSquareRoot()" class="btn">√</button>
           <button (click) ="doCalc()" class ="btn">=</button>
         </div>
       </div>
@@ -43,6 +33,8 @@ Portfolio
           <button (click)="buttonClick($event.target)"class ="btn">1</button>
           <button (click)="buttonClick($event.target)"class ="btn">2</button>
           <button (click)="buttonClick($event.target)"class ="btn">3</button>
+          <button (click)="toggle()" class="btn">+/-</button>
+          <button (click)="calculatePercent()" class="btn">%</button>
           <button (click)="clearCalc()"class ="btn">Clear</button>
         </div>
       </div>
@@ -67,6 +59,18 @@ Portfolio
       </div>
 
       </div>
+      <div className="links">
+    <a href="https://www.linkedin.com/in/ryangormican/">
+ Linkedin |
+</a>
+<a href="https://github.com/RyanGormican/CalculateExpress">
+Github |
+</a>
+<a href="https://ryangormicanportfoliohub.vercel.app/">
+Portfolio
+</a>
+   
+  </div>
   </div>
 </body>
 </html>
