--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -17,6 +17,18 @@
       </form>
     </div>
     <div class ="buttons">
+
+    <div class="operations row">
+  <div class="col-auto">
+    <button (click)="calculateTrig('sin')" class="btn">sin</button>
+    <button (click)="calculateTrig('cos')" class="btn">cos</button>
+    <button (click)="calculateTrig('tan')" class="btn">tan</button>
+    <button (click)="calculateTrig('asin')" class="btn">sin<sup>-1</sup></button>
+    <button (click)="calculateTrig('acos')" class="btn">cos<sup>-1</sup></button>
+    <button (click)="calculateTrig('atan')" class="btn">tan<sup>-1</sup></button>
+  </div>
+</div>
+
       <div class = "operations row">
         <div class="col-auto">
           <button (click)="buttonClick($event.target)" class ="btn">+</button>
