--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -26,6 +26,8 @@
     <button (click)="calculateTrig('asin')" class="btn">sin<sup>-1</sup></button>
     <button (click)="calculateTrig('acos')" class="btn">cos<sup>-1</sup></button>
     <button (click)="calculateTrig('atan')" class="btn">tan<sup>-1</sup></button>
+    <button (click)="calculateExponential()" class="btn">e<sup>x</sup></button>
+    <button (click)="calculateLogarithm()" class="btn">ln</button>
   </div>
 </div>
 
