--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -13,7 +13,7 @@
 
     <div class="display">
       <form action="" [formGroup]="inputStr">
-        <input type="text" formControlName="text">
+        <input type="text" formControlName="text" class="input">
       </form>
     </div>
     <div class ="buttons">
