--- a/src/app/calc/calc.component.css
+++ b/src/app/calc/calc.component.css
@@ -6,6 +6,11 @@ a {
 font-size:30px;
 color:white;
 }
+.input{
+  width:50vw;
+  height:2vh;
+  font-family: Helvetica;
+}
 html, body {
     font-family: Helvetica, sans-serif;
     background-color: #334;
